syntax = "proto3";

package enrollment;

service EnrollmentService {
  rpc Enroll (EnrollRequest) returns (EnrollResponse);
  rpc ListEnrollments (UserRequest) returns (EnrollmentList);
}

message EnrollRequest {
  int32 userId = 1;
  string courseId = 2;
}

message EnrollResponse {
  string message = 1;
}

message UserRequest {
  int32 userId = 1;
}

message Enrollment {
  int32 id = 1;
  int32 userId = 2;
  string courseId = 3;
}

message EnrollmentList {
  repeated Enrollment enrollments = 1;
}
